--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
@@ -29,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.3.1",
     "styled-components": "^6.1.11",
+    "typed.js": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
