--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
